Added Video Duration Tag

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "News MoKo",
-  "name": "Create React App Sample",
+  "short_name": "MoKo-Tube",
+  "name": "Made with ♡ by Mohsin",
   "icons": [
     {
       "src": "favicon.ico",
